--- a/README
+++ b/README
@@ -1,1 +1,34 @@
-Put your add-on component directories in this directory to load them when Moqui runs.
+# Assignment: Configure Moqui with MySQL
+
+> This assignment demonstrates how to configure the **Moqui Framework** to use **MySQL** for application development.
+
+---
+
+##  Objectives
+
+- Work with **Gradle**
+- Install and configure **MySQL**
+- Configure **Moqui** to connect with MySQL
+- Understand **UTF-8 character set**
+- Understand **JDBC Driver**
+- Load initial data into Moqui
+
+---
+
+## Prerequisites
+
+- Java JDK 11  
+- MySQL 8.0.32 or higher  
+- Moqui Framework  
+- MySQL Workbench (optional)
+
+---
+
+##  Install MySQL
+
+Install **MySQL Server 8.0.32+**
+
+Secure the installation:
+
+```bash
+mysql_secure_installation
